--- a/samples/sample.yaml
+++ b/samples/sample.yaml
@@ -1,15 +1,9 @@
 name: "TODO"
 
-targets:
-  quotesFeedRepo:
-    type: repo
-    htmlUrl: https://github.com/bryanmacfarlane/quotes-feed
-  sanenodeRepo:
-    type: repo
-    htmlUrl: https://github.com/bryanmacfarlane/sanenode    
+targets:  
   todoProject:
     type: project
-    htmlUrl: https://github.com/users/bryanmacfarlane/projects/1
+    htmlUrl: https://github.com/suyash691/susaluj-devops-dnet4/projects/1
     columnMap:
       Proposed: ["In Box"]           # Drafts author is working on.  Has a chance of moving soon
       Accepted: [
@@ -37,36 +31,4 @@ reports:
           report-on-label: '*'
           accepted-limit: 2
           in-progress-limit: 2
-          count-label-match: "(\\d+)-dev"
-      - name: "project-cycle-time"
-      - name: "project-in-progress"
-        config:
-          report-on: 'Epic'
-          wip-label-match: "(\\d+)-dev"
-      - name: "project-done"
-        config:
-          report-on: 'Epic'
-          daysAgo: 100
-      - name: "project-new"
-        config:
-          report-on: 'Epic'
-          daysAgo: 100
-  - name: Issues
-    title: "{{{ config.name }}} Project Report"
-    kind: markdown 
-    timezoneOffset: -8
-    targets: []
-    sections: 
-      - name: "repo-issues"
-        targets: ['sanenodeRepo', 'quotesFeedRepo']
-      - name: "repo-issues"
-        targets: ['sanenodeRepo']
-      - name: "repo-issues"
-        targets: ['quotesFeedRepo']
-  - name: QuotesFeedIssues
-    title: "QuotesFeed Issues Report"
-    kind: markdown 
-    timezoneOffset: -8
-    targets: ['quotesFeedRepo']
-    sections:
-      - name: "echo-board"
+      - name: "project-groupby-status"
